[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
fast-socks5 = "0.10.0"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.17", default-features = false }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
